create - add google places autocomplit intent and change structure of central fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="drawer_closed">Закрыт</string>
     <string name="about">О программе</string>
     <string name="action_settings">Настройки</string>
+    <string name="to_change">вы можете изменить локацию на необходимую</string>
+    <string name="btn_img_find_coords">изменить место</string>
 
 
 
