--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="action_settings">Настройки</string>
     <string name="to_change">вы можете изменить локацию на необходимую</string>
     <string name="btn_img_find_coords">изменить место</string>
+    <string name="autocompleeterror">К сожалению, во время выбора адреса произошла ошибка, прпробуйте снова</string>
 
 
 
