--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="to_change">вы можете изменить локацию на необходимую</string>
     <string name="btn_img_find_coords">изменить место</string>
     <string name="autocompleeterror">К сожалению, во время выбора адреса произошла ошибка, прпробуйте снова</string>
+    <string name="nonetworcconnection">Проверьте доступ к Интернету или поробуйте изменить место</string>
+    <string name="locunavaliable">Изменение локации не доступно</string>
 
 
 
