--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,7 @@
     <string name="nodata_full">нет данных</string>
     <string name="its_weather">нет данных</string>
     <string name="its_fishing">нет данных</string>
+    <string name="trytoload">Пробуем получить данные из сети</string>
+    <string name="nonewdata">не удалось загрузить данные… показываем старые данные… проверьте доступ к сети</string>
 
 </resources>
