feature - okHttp, retrofit and Presenter now process errors on http response correctly,

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,6 @@
     <string name="its_weather">нет данных</string>
     <string name="its_fishing">нет данных</string>
     <string name="trytoload">Пробуем получить данные из сети</string>
-    <string name="nonewdata">не удалось загрузить данные… показываем старые данные… проверьте доступ к сети</string>
-    <string name="nobitedata">не удалось загрузить данные для прогноза клева… показываем только прогноз погоды</string>
+    <string name="nonewdata">не удалось загрузить данные, показываем старые данные… возможно у Вас нет доступа к Интернету или погодный сервер не доступен</string>
 
 </resources>
