--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="drawer_closed">Closed</string>
     <string name="about">About app</string>
     <string name="action_settings">Settings</string>
-    <string name="to_change">You should change location here</string>
+    <string name="to_change">Tap text to enter loc or to compass to use GPS</string>
     <string name="btn_img_find_coords">Change place</string>
     <string name="autocompleeterror">Unfortunately, something goes wrong, please try again</string>
     <string name="nonetworcconnection">Check the Internet or try to change place</string>
@@ -27,4 +27,7 @@
     <string name="wind">wind: </string>
     <string name="pressure">pressure: </string>
     <string name="mmrtst">mmHg</string>
+    <string name="nogps">GPS unavailable or no access permission</string>
+    <string name="gpsenabled">GPS enabled, you can use compass button</string>
+    <string name="gpsdisabled">GPS disabled, your location do not updates</string>
 </resources>
