--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -30,5 +30,6 @@
     <string name="nogps">GPS недоступен или не получено разрешение на использование</string>
     <string name="gpsenabled">GPS включен, можно использовать кнопку "компас"</string>
     <string name="gpsdisabled">GPS выключен, местоположение больше не отслеживается</string>
+    <string name="pleaseenablegps">Эта функция не работает когда GPS выключен. Включите GPS и после нажмите НАЗАД</string>
 
 </resources>
