--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="drawer_open">Open</string>
     <string name="drawer_closed">Closed</string>
     <string name="about">About app</string>
+    <string name="mailtodev">Mail us</string>
     <string name="action_settings">Settings</string>
     <string name="to_change">Tap text to enter loc or to compass to use GPS</string>
     <string name="btn_img_find_coords">Change place</string>
@@ -31,4 +32,9 @@
     <string name="gpsenabled">GPS enabled, you can use compass button</string>
     <string name="gpsdisabled">GPS disabled, your location do not updates</string>
     <string name="pleaseenablegps">This function is disable when GPS is off. Please enable GPS and then push BACK</string>
+    <string name="email_subj">Aboun your app - Weather For Fishing</string>
+    <string name="nosuchactivity">No app to send e-mail found</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
