--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -35,6 +35,13 @@
     <string name="email_subj">Это письмо про приложение "Погода для рыбака"</string>
     <string name="nosuchactivity">Не найдено приложения для отправки почты</string>
     <string name="gotit">Понятно!</string>
+    <string name="pleasereadabout">Используя это Приложение Вы соглашаетесь с Условиями использования, опубликованными в разделе “О приложении”.</string>
+    <string name="termsofusage">(Приложение) является программным обеспечением с открытым исходным кодом, разработанным Eyesless.dev (код Приложения можно
+        найти на нашем аккаунте GitHub). Приложение находится в стадии бета-теста и поставляется пользователю “как есть”, без каких либо возникающих обязательств
+        разработчика приложения перед пользователем приложения или третьей стороной. Мы распространяем данное приложение ТОЛЬКО через Google Play, пожалуйста НЕ УСТАНАВЛИВАЙТЕ
+        Приложение из каких либо иных источников. Если вы используете Приложение, вы полностью принимаете на себя все риски, возникающие в результате этого использования и
+        полностью несете всю ответственность за любые последствия, возникшие в результате этого использования. Если вы не согласны с написанным выше - вы должны немедленно
+        прекратить использование приложения и удалить его с Вашего устройства.</string>
 
 
 </resources>
