--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="north">north</string>
     <string name="wind">wind: </string>
     <string name="pressure">pressure: </string>
+    <string name="percipe">perc.: </string>
     <string name="mmrtst">mmHg</string>
     <string name="nogps">GPS unavailable or no access permission</string>
     <string name="gpsenabled">GPS enabled, you can use compass button</string>
