--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -37,6 +37,7 @@
     <string name="nosuchactivity">Не найдено приложения для отправки почты</string>
     <string name="gotit">Понятно!</string>
     <string name="pleasereadabout">Используя это Приложение Вы соглашаетесь с Условиями использования, опубликованными в разделе “О приложении”.</string>
+    <string name="nothingtosetup">Извините, настройки недоступны в этой версии приложения</string>
     <string name="termsofusage">(Приложение) является программным обеспечением с открытым исходным кодом, разработанным Eyesless.dev (код Приложения можно
         найти на нашем аккаунте GitHub). Приложение находится в стадии бета-теста и поставляется пользователю “как есть”, без каких либо возникающих обязательств
         разработчика приложения перед пользователем приложения или третьей стороной. Мы распространяем данное приложение ТОЛЬКО через Google Play, пожалуйста НЕ УСТАНАВЛИВАЙТЕ
