feature - implement onboarding

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -38,12 +38,17 @@
     <string name="gotit">Понятно!</string>
     <string name="pleasereadabout">Используя это Приложение Вы соглашаетесь с Условиями использования, опубликованными в разделе “О приложении”.</string>
     <string name="nothingtosetup">Извините, настройки недоступны в этой версии приложения</string>
+    <string name="straightarrow">Нажмите на поле с названием места чтобы задать новое место</string>
+    <string name="inclinedarrow">Нажмите на компасс, чтобы получить прогноз для места, где вы находитесь сейчас</string>
+    <string name="oval">Это прогноз - чем веселее рыба, тем лучше будет клёв</string>
+    <string name="horizontalarrow">Это прогноз - просто смотрите насколько весело выглядит рыба</string>
     <string name="termsofusage">(Приложение) является программным обеспечением с открытым исходным кодом, разработанным Eyesless.dev (код Приложения можно
         найти на нашем аккаунте GitHub). Приложение находится в стадии бета-теста и поставляется пользователю “как есть”, без каких либо возникающих обязательств
         разработчика приложения перед пользователем приложения или третьей стороной. Мы распространяем данное приложение ТОЛЬКО через Google Play, пожалуйста НЕ УСТАНАВЛИВАЙТЕ
         Приложение из каких либо иных источников. Если вы используете Приложение, вы полностью принимаете на себя все риски, возникающие в результате этого использования и
         полностью несете всю ответственность за любые последствия, возникшие в результате этого использования. Если вы не согласны с написанным выше - вы должны немедленно
         прекратить использование приложения и удалить его с Вашего устройства.</string>
+    <string name="arrow">стрелка</string>
 
 
 </resources>
