bugfix - fix closing app with backstack

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -49,6 +49,5 @@
         полностью несете всю ответственность за любые последствия, возникшие в результате этого использования. Если вы не согласны с написанным выше - вы должны немедленно
         прекратить использование приложения и удалить его с Вашего устройства.</string>
     <string name="arrow">стрелка</string>
-
-
+    <string name="secondbackpressed">нажмите еще раз, чтобы выйти из приложения</string>
 </resources>
