--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="arrow">arrow</string>
     <string name="secondbackpressed">press one more time to exit app</string>
     <string name="tapanyplace">Tap on screen to continue</string>
+    <string name="chooseemailapp">Choose E-MAIL app(NOT MESSENGER)</string>
 
 
 </resources>
