feature - add wind speed

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -17,18 +17,19 @@
     <string name="trytoload">Пробуем получить данные из сети</string>
     <string name="nonewdata">не удалось загрузить данные, показываем старые данные… возможно у Вас нет доступа к Интернету или погодный сервер не доступен</string>
     <string name="stoprefresh">обновление данных по одной локации возможно не чаще одного раза в час</string>
-    <string name="nordeast">северо-восточный</string>
+    <string name="nordeast">северо-вост.</string>
     <string name="east">восточный</string>
-    <string name="southeast">юго-восточный</string>
+    <string name="southeast">юго-вост.</string>
     <string name="south">южный</string>
-    <string name="southwest">юго-западный</string>
+    <string name="southwest">юго-зап.</string>
     <string name="west">западный</string>
-    <string name="nordwest">северо-западный</string>
+    <string name="nordwest">северо-зап.</string>
     <string name="north">северный</string>
     <string name="wind">ветер: </string>
     <string name="pressure">давление: </string>
     <string name="percipe">вероятн.осад: </string>
     <string name="mmrtst">мм. рт. ст.</string>
+    <string name="mps">м/с</string>
     <string name="nogps">GPS недоступен или не получено разрешение на использование</string>
     <string name="gpsenabled">GPS включен, можно использовать кнопку "компас"</string>
     <string name="gpsdisabled">GPS выключен, местоположение больше не отслеживается</string>
