--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,18 +17,19 @@
     <string name="trytoload">Trying to retrieve data from remote server</string>
     <string name="nonewdata">Failed to load data here is the old data… a network or weather server is not available</string>
     <string name="stoprefresh">updating data for same location allow only one time per hour</string>
-    <string name="nordeast">north-east</string>
+    <string name="nordeast">n-east</string>
     <string name="east">east</string>
-    <string name="southeast">south-east</string>
+    <string name="southeast">s-east</string>
     <string name="south">south</string>
-    <string name="southwest">south-west</string>
+    <string name="southwest">s-west</string>
     <string name="west">west</string>
-    <string name="nordwest">north-werst</string>
+    <string name="nordwest">n-west</string>
     <string name="north">north</string>
     <string name="wind">wind: </string>
     <string name="pressure">pressure:</string>
     <string name="percipe">perc.prob:</string>
     <string name="mmrtst">mmHg</string>
+    <string name="mps">m/s</string>
     <string name="nogps">GPS unavailable or no access permission</string>
     <string name="gpsenabled">GPS enabled, you can use compass button</string>
     <string name="gpsdisabled">GPS disabled, your location do not updates</string>
